Sonar Fixes (7)
Signed-off-by: Avgustin Marinov <Avgustin.Marinov@bosch.com>